tests/integration/cfc/snapshots/tests__integration__cfc__validation_tests__duplicate_label_validation.snap
---
source: tests/integration/cfc/validation_tests.rs
expression: diagnostician.buffer().unwrap()
---
error[E018]: lbl: Duplicate label.
  ┌─ <internal>.cfc:1:1
  │
1 │ 
  │ ^
  │ 
  │ lbl: Duplicate label.
  │ see also
  │ see also
